Bug 393861 - Too thin fonts when using Source Code Pro
Summary: Too thin fonts when using Source Code Pro
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.45.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-04 21:48 UTC by Guo Yunhe
Modified: 2018-08-13 20:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of Source Code Pro fonts for PHP files. (143.57 KB, image/png)
2018-05-04 21:48 UTC, Guo Yunhe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guo Yunhe 2018-05-04 21:48:01 UTC
Created attachment 112422 [details]
Screenshot of Source Code Pro fonts for PHP files.

Steps to reproduce:

0. Install Kate and Source Code Pro font
1. Open Kate.
2. Set font as "Source Code Pro", font weight normal, font size 10pt.
3. Open a PHP file or XML file.
4. Check the font weight of editor window.

Expected:

Editor should use Normal and Bold font weight.

Actually:

Editor use extra-thin font weight for many texts. They are hard to read.
Comment 1 Christoph Cullmann 2018-05-28 03:09:17 UTC
Hi,
I can see that, too, for PHP, thought I don't see the same effect.

It seems that happens only for parts, e.g. in C++ all looks fine beside the include names.
Comment 2 Christoph Cullmann 2018-05-28 03:14:49 UTC
I think I fixed that issue with 5.46, but I need to test that again, I use here 5.45, too, ATM, which has what you show here.
Comment 3 Christoph Cullmann 2018-08-13 20:32:30 UTC
Git commit 35d7e8065138c6c66fd7fcf0e1051c70701743bc by Christoph Cullmann.
Committed on 13/08/2018 at 20:26.
Pushed by cullmann into branch 'syntax-highlighting'.

fix non-bold attributes to not have thin text

CHANGELOG: non-bold text no longer renders with font weight thin but
normal

M  +1    -1    src/utils/attribute.cpp

https://commits.kde.org/ktexteditor/35d7e8065138c6c66fd7fcf0e1051c70701743bc
Comment 4 Christoph Cullmann 2018-08-13 20:33:00 UTC
Git commit 2a9c2a28064f47026669388107af74d3d1864744 by Christoph Cullmann.
Committed on 13/08/2018 at 20:28.
Pushed by cullmann into branch 'master'.

fix non-bold attributes to not have thin text

CHANGELOG: non-bold text no longer renders with font weight thin but
normal

M  +1    -1    src/utils/attribute.cpp

https://commits.kde.org/ktexteditor/2a9c2a28064f47026669388107af74d3d1864744