fix non-bold attributes to not have thin text

CHANGELOG: non-bold text no longer renders with font weight thin but
normal

BUG: 393861